# frontx

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
docs/: finite.md  index.md  inverse.md  models.md  neural.md  solve.md
docs/frontx/: finite.md  models.md  neural.md
docs/frontx/examples/: validity.md
docs/frontx/examples/neural/: exact.md  grenoblesand.md
docs/frontx/examples/neural/Validity/: letd.md  vangenuchten.md
docs/tests/: finite.md  inverse.md  solve.md
docs/tests/test_neural/: exact.md  grenoblesand.md
docs/tests/test_neural/test_validity/: letd.md  vangenuchten.md
examples/: validity.py
examples/neural/: exact.py  grenoblesand.py
examples/neural/validity/: letd.py  vangenuchten.py
frontx/: __init__.py  _boltzmann.py  _inverse.py  _util.py  finite.py  inverse.py  models.py  neural.py
frontx/_inverse/: __init__.py  fit.py  interpolated.py  param.py  sorptivity.py
frontx/examples/: validity.py
frontx/examples/data/validity/: __init__.py
frontx/examples/neural/: exact.py  grenoblesand.py
frontx/examples/neural/validity/: letd.py  vangenuchten.py
src/frontx/: __init__.py  _boltzmann.py  _forward.py  finite.py  models.py  neural.py
src/frontx/_inverse/: __init__.py  fit.py  interpolated.py  param.py
src/frontx/examples/: validity.py
src/frontx/examples/neural/: exact.py  grenoblesand.py
src/frontx/examples/neural/validity/: letd.py  vangenuchten.py
tests/: test_finite.py  test_inverse.py  test_neural.py  test_solve.py
tests/test_neural/: test_exact.py  test_grenoblesand.py
tests/test_neural/test_validity/: test_letd.py  test_vangenuchten.py  validity.py
