[build-system]
requires = ["uv_build>=0.7.2,<0.10"]
build-backend = "uv_build"

[project]
name = "frontx"
version = "0.1.0"
license = "Apache-2.0"
authors = [{ name = "Gabriel S. Gerlero", email = "ggerlero@cimec.unl.edu.ar" }]
description = "Nonlinear diffusion problems with JAX"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "diffrax>=0.7,<0.8",
    "equinox>=0.12.1,<0.14",
    "interpax>=0.3.8,<0.4",
    "jax>=0.5,<0.9",
    "numpy>=1,<3",
    "optax>=0.2.4,<0.3",
    "optimistix>=0.0.10,<0.1",
    "parametrix>=0.1,<0.2",
    "scipy>=1.7,<2",
]

[project.optional-dependencies]
examples = ["matplotlib>=3,<4"]

[project.urls]
Homepage = "https://github.com/gerlero/frontx"
Repository = "https://github.com/gerlero/frontx"
Documentation = "https://frontx.readthedocs.io"

[dependency-groups]
examples = ["frontx[examples]"]
lint = ["ruff"]
typing = [
    {include-group = "examples"},
    "ty"
]
test = [
    "fronts>=1,<2",
    "pytest>=8,<10",
    "pytest-cov"
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.12,<10",
    "mkdocstrings[python]>=0.29.1,<0.31",
]
dev = [
    {include-group = "examples"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "test"},
    {include-group = "docs"},
]

[tool.uv.build-backend]
module-root = "."

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "COM812",
    "D",
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
